# fusion-qec-sim

./: .gitignore  ALGORITHM_PATTERNS.md  AUDIT_CHECKLIST.md  BP_DYNAMICS_EXPERIMENTS_v4.7.1.md  CHANGELOG.md  CLAUDE.md  CURRENT_TASK.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_RULES.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LICENSE  PROJECT_STATE.md  QISKIT_INTEGRATION.md  README.md  RELEASE_NOTES.md  ROADMAP.md  UPGRADE_CHECKLIST.md  bp_phase_transition_data.json  bp_phase_transition_data_extended.json  bulk_merge_fork.sh  conftest.py  determinism_smoke_v3_0_1.json  dev-requirements.txt  extract_and_prepare_qec_data.py  extract_pr_data.py  fusion_qec_fix.patch  minimal_dps_probe_bsc_syndrome.json  mirror_repos.sh  package.json  plotly_example.py  pyproject.toml  qec_data_prepared.csv  qec_golay.py  qec_theory_diagram.txt  requirements.txt  run_bot.py  scaffold_fusion_qec.py  sonify_triality.py  (+3 more)
bench/: __init__.py  benchmark_report_feb-26-2026.md  benchmark_report_v3.1.4_metrics.md  benchmark_report_v3.2.0_bsc_syndrome.md  benchmark_report_v3.2.1_bsc_syndrome.md  bp_phase_transition_experiments.py  bp_phase_transition_extended.py  channel_model_comparative_analysis_v3.2.0.md  channel_model_comparative_analysis_v3.2.1.md  dps_v381_eval.py  industry_comparison_report_feb-26-2026.md  industry_comparison_v3.1.4_metrics.md  industry_comparison_v3.2.0_bsc_syndrome.md  industry_comparison_v3.2.1_bsc_syndrome.md  near_threshold_report_feb-26-2026.md  near_threshold_v3.1.4_metrics.md  near_threshold_v3.2.0_bsc_syndrome.md  near_threshold_v3.2.1_bsc_syndrome.md  (+2 more)
(+392 files in other folders)
