[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "qec"
version = "4.8.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
science = [
    "scipy>=1.10",
    "qutip>=4.7",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "scipy>=1.10",
    "qutip>=4.7",
]
