[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qec"
version = "9.1.0"
description = "Deterministic Tanner graph generation and QLDPC structure discovery engine"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-repeat>=0.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
